# DSA

./: .gitignore  README.md  pyproject.toml
Implementation/: SingleLinkedList.py  SinglyLinkedList.py
Problems/SinglyLinkedList/: Reverse.py  ReverseN.py
SingleLinkedList/: __init__.py
SinglyLinkedList/: CheckLoop.py  DeleteLoop.py  README.md  Reverse.py  ReverseN.py  SinglyLinkedList.py  __init__.py
