[tool.poetry]
name = "DataStructure&Algorithms"
version = "0.1.0"
description = "Implentating Data Struncture & Algorithms with solved  problems on it"
authors = ["Shahprogrammer <shahprogrammer05@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
